-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.7.0
-
None
-
f2159d713 (dev), 45b90af43 (6.7)
#include <QRestAccessManager>
This does not find the headers, instead you need to add #include <qrestaccessmanager.h>
| For Gerrit Dashboard: QTBUG-123875 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 552367,2 | QRestAccessManager: fix syncqt generation | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 552368,1 | Fix the missing QRestAccessManager | dev | qt/qtbase | Status: ABANDONED | 0 | 0 |
| 552606,2 | QRestAccessManager: fix syncqt generation | 6.7 | qt/qtbase | Status: MERGED | +2 | 0 |